# D-GeometryCentral

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dub.json
.github/workflows/: ci.yml
csrc/: gc_c.cpp
examples/: geodesic.d
include/: gc_c.h
source/geometrycentral/: c.d
